Refactor Chat History API